bug #455: fix filtered select dropdown menu align with controll width

--- a/recipot/src/main/ts/recipot/src/components/complex/styles.scss
+++ b/recipot/src/main/ts/recipot/src/components/complex/styles.scss
@@ -183,6 +183,10 @@
             color: $form-check-input-checked-bg-color;
         }
     }
+
+    .dropdown-menu {
+        width: 100%;
+    }
 }
 
 .statistic-circle {
